SLING-10493 review and resolve code quality warnings and issues (#16)
reported by sonar